--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Index</title>
-</head>
-<body>
+  </head>
+  <body>
     <nav>
-        <a href="/journal/new">Add Journal</a>
+      <a href="/journal/new">Add Journal</a>
     </nav>
     <h1>Journal list</h1>
     <ul>
-        <% journal.forEach(journal =>{ %> 
-            <li> 
-                <a href="/journal/<%=journal._id  %>"><%=journal.title %></a>
-            </li>
-        <% }) %> 
+      <% journal.forEach(journal =>{ %>
+      <li>
+        <a href="/journal/<%=journal._id%>">
+            <%=journal.title %></a>
+      </li>
+      <% }) %>
     </ul>
-</body>
+  </body>
 </html>
